--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,13 @@
 }
  
 
+.ios-justify {
+  text-align: justify;
+  text-justify: inter-word;
+  hyphens: auto;
+  word-break: break-word;
+  /* Android ka extra gap thoda compress */
+  word-spacing: -0.5px;
+}
+
+
