--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,14 @@
 }
 
 
+.gradient-bg {
+  background: radial-gradient(circle at center, #352B31 40%, #121E28 70%, #0b1218 100%);
+}
+
+
+.particles-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
